Bugfixes for corner cases. Small refactorings. More tests.